openshift/deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: devnation
spec: {}
status: {}
---
apiVersion: v1
data:
  database-name: c2FtcGxlZGI=
  database-password: bXlzZWNyZXQ=
  database-user: bXl1c2Vy
kind: Secret
metadata:
  name: todo-psql-example
  namespace: devnation
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: todo-psql-example
  name: postgresql
  namespace: devnation
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: postgresql
  strategy:
    activeDeadlineSeconds: 21600
    recreateParams:
      timeoutSeconds: 600
    resources: {}
    type: Recreate
  template:
    metadata:
      labels:
        name: postgresql
      name: postgresql
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: todo-psql-example
        - name: POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: todo-psql-example
        - name: POSTGRESQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: database-name
              name: todo-psql-example
        image: registry.redhat.io/rhel8/postgresql-12:1-128
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - /usr/libexec/check-container
            - --live
          failureThreshold: 3
          initialDelaySeconds: 120
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 10
        name: postgresql
        ports:
        - containerPort: 5432
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - /usr/libexec/check-container
          failureThreshold: 3
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /var/lib/pgsql/data
          name: data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - emptyDir: {}
        name: data
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes the database server
  labels:
    app: todo-psql-example
  name: postgresql
  namespace: devnation
spec:
  ports:
  - name: postgresql
    port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    name: postgresql
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    app: todo-psql-example
  name: todo
  namespace: devnation
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: todo
  template:
    metadata:
      labels:
        name: todo
      name: todo
    spec:
      containers:
      - env:
        - name: POSTGRESQL_USER
          valueFrom:
            secretKeyRef:
              key: database-user
              name: todo-psql-example
        - name: POSTGRESQL_PASSWORD
          valueFrom:
            secretKeyRef:
              key: database-password
              name: todo-psql-example
        - name: POSTGRESQL_DATABASE
          valueFrom:
            secretKeyRef:
              key: database-name
              name: todo-psql-example
        - name: DB_HOST
          value: "postgresql"
        image: quay.io/praveenkumar/todo
        imagePullPolicy: IfNotPresent
        name: todo
        ports:
        - containerPort: 3000
          protocol: TCP
        resources:
          limits:
            memory: 512Mi
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    description: Exposes and load balances the application pods
  labels:
    app: todo-psql-example
  name: todo-psql-example
  namespace: devnation
spec:
  ports:
  - name: web
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    name: todo
  sessionAffinity: None
  type: ClusterIP
